# nl-sre-english

./: .gitignore  Cargo.toml  README.md
benches/: full_benchmark.rs
examples/: benchmark.rs  verb_groups.rs
paper/: cover_letter.tex  nl-sre-english-paper.tex
paper/data/: benchmarks.csv
paper/figures/: fig_architecture.tex  generate_benchmark_figure.py
paper/tables/: table1_categories.tex  table2_benchmarks.tex
src/: lib.rs  main.rs
src/applog/: mod.rs
src/chars/: mod.rs
src/command_parser/: mod.rs
src/dictionary/: bktree.rs  common_words.txt  mod.rs
src/disambiguator/: mod.rs
src/domain/: mod.rs
src/grammar/: mod.rs
src/quantitative/: mod.rs
src/semantic/: mod.rs
src/tao/: mod.rs
src/transpiler/: mod.rs
src/uniform/: mod.rs
src/verbs/: data.rs  data2.rs  data3.rs  data4.rs  mod.rs
tests/: regression.rs
